--- a/web/src/css/main.styl
+++ b/web/src/css/main.styl
@@ -15,10 +15,11 @@ table.stats
             background-color #CCCCCC
 
 
-        &.data
+        &.num
             text-align right
 
 p.about
     outline 1px solid rgba(200,200,0,0.75)
     padding 0.5em
-    margin 0.1em
+    margin 0.5em 0 0.5em 0
+    width 40em
