added more sensible conn lifetime/ping lag times

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -43,12 +43,12 @@ html
         table.stats
             tr
                 th 5s
-                th 15s
                 th 30s
                 th 1m
-                th 2m
                 th 5m
-                th &gt; 10m
+                th 10m
+                th 30m
+                th &gt; 30m
             tr
                 td.num 1%
                 td.num 10%
@@ -89,10 +89,10 @@ html
                 th 50ms
                 th 100ms
                 th 500ms
-                th 1000ms
-                th 1500ms
-                th 3000ms
-                th 3000ms
+                th 1.5s
+                th 5s
+                th 10s
+                th timed out (&gt; 10s)
             tr
                 td.num 1%
                 td.num 10%
