Add duplicate pings tracker.

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -70,6 +70,7 @@ html
                 th Sent
                 th Received
                 th Timeout
+                th Duplicate
                 th Success Rate
             tr
                 td.num
@@ -78,6 +79,8 @@ html
                     span#ping_received
                 td.num
                     span#ping_timeout
+                td.num
+                    span#ping_duplicate
                 td.num
                     span#ping_rate
                     span %
