show ping latency in UI

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -94,13 +94,20 @@ html
                 th 10s
                 th timed out (&gt; 10s)
             tr
-                td.num 1%
-                td.num 10%
-                td.num 25%
-                td.num 10%
-                td.num 5%
-                td.num 1%
-                td.num 1%
+                td.num
+                    span#p_t50ms -
+                td.num 
+                    span#p_t100ms -
+                td.num 
+                    span#p_t500ms -
+                td.num 
+                    span#p_t1500ms -
+                td.num 
+                    span#p_t5000ms -
+                td.num 
+                    span#p_t10000ms -
+                td.num 
+                    span#p_tXms -
 
         table.stats
             tr
