add connection lifetime counts

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -50,13 +50,20 @@ html
                 th 30m
                 th &gt; 30m
             tr
-                td.num 1%
-                td.num 10%
-                td.num 25%
-                td.num 10%
-                td.num 5%
-                td.num 1%
-                td.num 1%
+                td.num
+                    span#c_t5s -
+                td.num
+                    span#c_t30s -
+                td.num
+                    span#c_t60s -
+                td.num
+                    span#c_t300s -
+                td.num
+                    span#c_t600s -
+                td.num
+                    span#c_t1800s -
+                td.num
+                    span#c_tXs -
 
         p.about 
             strong Note: 
