add outstanding ping counts

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -75,6 +75,7 @@ html
         table.stats
             tr
                 th Sent
+                th Outstanding
                 th Received
                 th Timeout
                 th Duplicate
@@ -82,6 +83,8 @@ html
             tr
                 td.num
                     span#ping_sent
+                td.num
+                    span#ping_outstanding
                 td.num
                     span#ping_received
                 td.num
