Add ping failed stats. Refactor data sending
- websocket now sends a JSON blob that can be injected directly
  into the backbone.js model

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -84,6 +84,7 @@ html
                 th Sent
                 th Outstanding
                 th Received
+                th PUT Failed 
                 th Timeout
                 th Duplicate
                 th Success Rate
@@ -94,6 +95,8 @@ html
                     span#ping_outstanding
                 td.num
                     span#ping_received
+                td.num
+                    span#ping_failed
                 td.num
                     span#ping_timeout
                 td.num
