improve timeout logic, fix UI bugs

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -142,7 +142,9 @@ html
                 th 1.5s
                 th 5s
                 th 10s
-                th timed out (&gt; 10s)
+                th 20s
+                th 60s
+                th &gt; 60s
             tr
                 td.num
                     span#u_t50ms -
@@ -156,6 +158,10 @@ html
                     span#u_t5000ms -
                 td.num 
                     span#u_t10000ms -
+                td.num 
+                    span#u_t20000ms -
+                td.num 
+                    span#u_t60000ms -
                 td.num 
                     span#u_tXms -
 
