first stab at faster connections

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -26,7 +26,7 @@ html
                 td
                     span#clients
             tr
-                td.stat Chanels
+                td.stat Channels
                 td
                     span#channels
             tr
@@ -55,12 +55,15 @@ html
         table.stats
             tr
                 th Attempted
-                th OK
+                th Waiting
+                th Connect OK
                 th Dropped
                 th Success Rate
             tr
                 td.num
                     span#conn_attempted --
+                td.num
+                    span#conn_waiting --
                 td.num
                     span#conn_ok --
                 td.num
