add stats for connection wait on connect, and register

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -55,12 +55,18 @@ html
         table.stats
             tr
                 th Attempted
+                th Wait Connect
+                th Wait Register
                 th OK
                 th Dropped
                 th Success Rate
             tr
                 td.num
                     span#conn_attempted --
+                td.num
+                    span#conn_wait --
+                td.num
+                    span#conn_wait_reg --
                 td.num
                     span#conn_ok --
                 td.num
