--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -26,7 +26,7 @@ html
                 td
                     span#clients
             tr
-                td.stat Chanels
+                td.stat Channels/client
                 td
                     span#channels
             tr
