add workers to UI

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -22,6 +22,10 @@ html
                 td
                     span#maxupdatetime
             tr
+                td.stat Workers
+                td
+                    span#workers
+            tr
                 td.stat Clients
                 td
                     span#clients
