show deltas in some stats

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -125,12 +125,21 @@ html
             tr
                 td.num
                     span#put_sent
+                    | (
+                    span#d_put_sent
+                    |)
                 td.num
                     span#put_failed
                 td.num
                     span#update_outstanding
+                    | (
+                    span#d_update_outstanding
+                    |)
                 td.num
                     span#update_received
+                    | (
+                    span#d_update_received
+                    | )
                 td.num
                     span#update_timeout
                 td.num
