add more deltas info

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -67,14 +67,29 @@ html
             tr
                 td.num
                     span#conn_attempted --
+                    | (
+                    span#d_conn_attempted
+                    |)
                 td.num
                     span#conn_wait --
+                    | (
+                    span#d_conn_wait
+                    |)
                 td.num
                     span#conn_wait_reg --
+                    | (
+                    span#d_conn_reg
+                    |)
                 td.num
                     span#conn_ok --
+                    | (
+                    span#d_conn_ok
+                    |)
                 td.num
                     span#conn_drop --
+                    | (
+                    span#d_conn_drop
+                    |)
                 td.num
                     span#conn_rate --
                     span %
