fix bug in delta display

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -78,7 +78,7 @@ html
                 td.num
                     span#conn_wait_reg --
                     | (
-                    span#d_conn_reg
+                    span#d_conn_wait_reg
                     |)
                 td.num
                     span#conn_ok --
