checkpoint commit, all buggy

--- a/web/views/index.jade
+++ b/web/views/index.jade
@@ -132,6 +132,7 @@ html
             tr
                 th PUT Sent
                 th PUT Failed 
+                th NET error
                 th Wait
                 th Received
                 th Timed out
@@ -145,6 +146,8 @@ html
                     |)
                 td.num
                     span#put_failed
+                td.num
+                    span#update_net_error
                 td.num
                     span#update_outstanding
                     | (
